<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="uk.co.chrisjenx.calligraphy.sample.PlaceholderFragment"
        tools:ignore="MissingPrefix">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/default_theme"/>

        <TextView
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_fontfamily_view"
            />

        <TextView
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_fontfamily_view"
            />

        <TextView
            style="@style/AppTheme.Widget.TextView.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_in_style"/>

        <TextView
            style="@style/AppTheme.Widget.TextViewAppearanceStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_in_appears_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_in_appears"
            android:textAppearance="@style/TextAppearance.FontPathView"/>

        <TextView
            android:id="@+id/my_text_appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/defined_in_appears"
            android:textAppearance="@style/TextAppearance.FontPathView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_in_appears_caps"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.FontPathView"/>

        <uk.co.chrisjenx.calligraphy.sample.CustomTextView
            android:fontFamily="@font/oswald_stencbab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/defined_custom_view"/>

        <uk.co.chrisjenx.calligraphy.sample.CustomViewWithTypefaceSupport
            android:fontFamily="@font/oswald_stencbab"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ViewStub
            android:id="@+id/stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout="@layout/stub"/>

        <ViewStub
            android:id="@+id/stub_with_font_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout="@layout/stub_with_font_path"/>

        <CheckBox
            android:fontFamily="@font/oswald_stencbab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:text="@string/checkbox_custom"/>

        <EditText
            android:id="@+id/edit_text"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:hint="@string/edit_text_hint"/>

        <uk.co.chrisjenx.calligraphy.sample.TextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/custom_view_style_text"/>

        <Button
            android:id="@+id/button_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:text="@string/button_default"/>

        <Button
            android:id="@+id/button_bold"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:text="@string/button_defined"/>

    </LinearLayout>
</ScrollView>
